fixing style: removing overlappting text from line-height 0

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   justify-content: center;
   /* border: 10px solid goldenrod; */
   background-color: #282c34;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   align-items: center;
   font-size: calc(8px + 1vmin);
@@ -19,7 +19,8 @@
 }
 
 p {
-  line-height: 0px;
+  padding: 0;
+  margin: 0;
   text-align: left;
 }
 
@@ -61,7 +62,7 @@ button:hover {
   /* flex: 5; */
   flex-wrap: wrap;
   width: 100%;
-  flex-direction: column;
+  /* flex-direction: column; */
   margin: 5px;
   padding: 2px;
   /* border: 1px solid red; */
